se agrego el servicio que escucha la cola de productos y la inserta en la db global mediante el Rabbit

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,10 @@
   },
   "TopicAndQueueNames": {
     "OrderCreatedTopic": "order_exchange",
-    "OrderQueueName": "orders_queue"
+    "OrderQueueName": "order_processing_queue",
+
+    "ProductCreatedTopic": "ProductCreated",
+    "ProductQueueName": "ProductCreatedQueue"
   },
   "RabbitMQ": {
     "HostName": "localhost",
